<resources>
    <string name="app_name">TecNM UPN Nuevo Ingreso</string>
    <string name="imagen_de_codigo_qr">imagen de codigo qr</string>
    <string name="guardar_invitaci_n">Guardar Pase en galería</string>
    <string name="n_mero_de_control">Número de control</string>
    <string name="nuevo_ingreso">Nuevo Ingreso TecNM campus Uruapan</string>
    <string name="buscar_invitaci_n">Buscar Pase</string>
    <string name="cerrar">Cerrar</string>
    <string name="correo_jefe"><a href="juanandrade@tecuruapan.edu.mx">Google</a></string>
    <string name="acerca_de">Acerca de</string>
</resources>